[workspace]
members = ["tempos", "tempos-mom", "tempos-invoker", "tempos-trigger"]

[workspace.dependencies]
anyhow = "1.0.69"
clap = "4.1.8"
env_logger = "0.10.0"
log = "0.4.17"
nix = { version = "0.26.2", features = ["net"] }
socket2 = { version = "0.5.1", features = ["all"] }
libc = "0.2.139"
libloading = "0.7.4"
rand = "0.8.5"
sysinfo = "0.28.2"