[package]
name = "tempos-invoker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
ctrlc = "3.2.1"
env_logger = { workspace = true }
libloading = { workspace = true }
log = { workspace = true }
lz4_flex = "0.10.0"
rand = { workspace = true }
socket2 = { workspace = true }
sysinfo = { workspace = true }
tempos = { path = "../tempos/" }
tokio = { version = "1.18.2", features = ["rt", "net", "time"] }
wasmer = { version = "3.1.1", features = ["llvm"] }
wasmer-compiler-llvm = "3.1.1"
